error message tweak

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,6 +40,6 @@
   "no2": "Nitrogen dioxide",
   "so2": "Sulfur dioxide",
 
-  "error": "Error",
-  "errorMessage": "API connection error"
+  "error": "API connection error",
+  "errorAction": "Close"
 }
