--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -39,7 +39,7 @@
   "no2": "Dwutlenek azotu",
   "so2": "Dwutlenek siarki",
 
-  "error": "Błąd",
-  "errorMessage": "Błąd połączenia z API"
+  "error": "Błąd połączenia z API",
+  "errorAction": "Zamknij"
   
 }
