word translation change

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -9,7 +9,7 @@
   "location": "Lokalizacja",
   "parameter": "Zanieczyszczenie",
 
-  "dateRangeNow": "Teraz",
+  "dateRangeNow": "Obecnie",
   "dateRangeCalendar": "Kalendarz",
   "chooseDateFrom": "Od",
   "chooseDateTo": "Do",
