--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,5 +41,7 @@
   "so2": "Sulfur dioxide",
 
   "error": "API connection error",
-  "errorAction": "Close"
+  "errorAction": "Close",
+
+  "unitsMessage": "Units: "
 }
