--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -40,6 +40,8 @@
   "so2": "Dwutlenek siarki",
 
   "error": "Błąd połączenia z API",
-  "errorAction": "Zamknij"
+  "errorAction": "Zamknij",
+
+  "unitsMessage": "Jednostki: "
   
 }
