--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -40,6 +40,7 @@
   "so2": "Dwutlenek siarki",
 
   "error": "Błąd połączenia z API",
+  "errorNoData": "Brak danych",
   "errorAction": "Zamknij",
 
   "unitsMessage": "Jednostki: "
