--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,6 +41,7 @@
   "so2": "Sulfur dioxide",
 
   "error": "API connection error",
+  "errorNoData": "No data available",
   "errorAction": "Close",
 
   "unitsMessage": "Units: "
